// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Experimental/card Circle Decorative card with Icon 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b />
    </div>
    
    
    <div>
      <b>
        XL
      </b>
    </div>
    
    
    <div>
      <b>
        L
      </b>
    </div>
    
    
    <div>
      <b>
        M
      </b>
    </div>
    
    
    <div>
      <b>
        S
      </b>
    </div>
    
    
    <div>
      <b>
        XS
      </b>
    </div>
       

  </div>
  

  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Indigo
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--indigo"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--indigo"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--indigo"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--indigo"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--indigo"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Crimson
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--crimson"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--crimson"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--crimson"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--crimson"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--crimson"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Cyan
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--cyan"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--cyan"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--cyan"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--cyan"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--cyan"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Lime
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--lime"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--lime"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--lime"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--lime"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--lime"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Pink
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--pink"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--pink"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--pink"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--pink"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--pink"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Yellow
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--yellow"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--yellow"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--yellow"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--yellow"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--yellow"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Teal
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--teal"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--teal"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--teal"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--teal"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--teal"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


</section>
`;

exports[`Storyshots Experimental/card Circle Decorative card with Initials 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Indigo
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--indigo"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--indigo"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--indigo"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--indigo"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--indigo"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Crimson
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--crimson"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--crimson"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--crimson"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--crimson"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--crimson"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Cyan
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--cyan"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--cyan"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--cyan"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--cyan"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--cyan"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Lime
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--lime"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--lime"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--lime"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--lime"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--lime"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Pink
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--pink"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--pink"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--pink"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--pink"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--pink"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Yellow
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--yellow"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--yellow"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--yellow"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--yellow"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--yellow"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Teal
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xl fn-card--teal"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--l fn-card--teal"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--m fn-card--teal"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--s fn-card--teal"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--circle fn-card--xs fn-card--teal"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


</section>
`;

exports[`Storyshots Experimental/card Circle Decorative card with Thumbnail 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        XL
      </b>
    </div>
    
    
    <div>
      <b>
        L
      </b>
    </div>
    
    
    <div>
      <b>
        M
      </b>
    </div>
    
    
    <div>
      <b>
        S
      </b>
    </div>
    
    
    <div>
      <b>
        XS
      </b>
    </div>
       

  </div>
  

  <div
    class="docs-fn-container"
  >
    
    
    <div
      class="fn-card fn-card--circle fn-card--thumbnail fn-card--xl"
    >
      
        
      <div
        aria-label="John Doe"
        class="fn-card__thumbnail"
        role="img"
        style="background-image: url('/assets/images/backgrounds/city.jpg')"
      />
      
    
    </div>
    
   
    
    <div
      class="fn-card fn-card--circle fn-card--thumbnail fn-card--l"
      style="background-image: url('/assets/images/backgrounds/city.jpg')"
    >
      
        
      <div
        aria-label="John Doe"
        class=" fn-card__thumbnail"
        role="img"
        style="background-image: url('/assets/images/backgrounds/city.jpg')"
      />
      
    
    </div>
    
    
    
    <div
      class="fn-card fn-card--circle fn-card--thumbnail fn-card--m"
      style="background-image: url('/assets/images/backgrounds/city.jpg')"
    >
      
        
      <div
        aria-label="John Doe"
        class="fn-card__thumbnail"
        role="img"
        style="background-image: url('/assets/images/backgrounds/city.jpg')"
      />
      
    
    </div>
    
    
    
    <div
      class="fn-card fn-card--circle fn-card--thumbnail fn-card--s"
      style="background-image: url('/assets/images/backgrounds/city.jpg')"
    >
      
        
      <div
        aria-label="John Doe"
        class=" fn-card__thumbnail"
        role="img"
        style="background-image: url('/assets/images/backgrounds/city.jpg')"
      />
      
    
    </div>
    
    
    
    <div
      class="fn-card fn-card--circle fn-card--thumbnail fn-card--xs"
      style="background-image: url('/assets/images/backgrounds/city.jpg')"
    >
      
        
      <div
        aria-label="John Doe"
        class=" fn-card__thumbnail"
        role="img"
        style="background-image: url('/assets/images/backgrounds/city.jpg')"
      />
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/card Circle Interactive card with Icon 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b />
    </div>
    
    
    <div>
      <b>
        XL
      </b>
    </div>
    
    
    <div>
      <b>
        L
      </b>
    </div>
    
    
    <div>
      <b>
        M
      </b>
    </div>
    
    
    <div>
      <b>
        S
      </b>
    </div>
    
    
    <div>
      <b>
        XS
      </b>
    </div>
       

  </div>
  

  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Indigo
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--indigo"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--indigo"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--indigo"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--indigo"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--indigo"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Crimson
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--crimson"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--crimson"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--crimson"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--crimson"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--crimson"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Cyan
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--cyan"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--cyan"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--cyan"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--cyan"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--cyan"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Lime
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--lime"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--lime"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--lime"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--lime"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--lime"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Pink
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--pink"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--pink"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--pink"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--pink"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--pink"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Yellow
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--yellow"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--yellow"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--yellow"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--yellow"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--yellow"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Teal
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--teal"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--teal"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--teal"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--teal"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--teal"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--bell"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


</section>
`;

exports[`Storyshots Experimental/card Circle Interactive card with Initials 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        :normal
      </b>
    </div>
    
    
    <div>
      <b>
        :hover
      </b>
    </div>
    
    
    <div>
      <b>
        :active
      </b>
    </div>
    
    
    <div>
      <b>
        :focus
      </b>
    </div>
    
    
    <div>
      <b>
        :disabled
      </b>
    </div>
       

  </div>
  

  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Indigo
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--indigo"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--indigo is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--indigo is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--indigo is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--indigo is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Crimson
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--crimson"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--crimson is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--crimson is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--crimson is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--crimson is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Cyan
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--cyan"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--cyan is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--cyan is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--cyan is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--cyan is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Lime
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--lime"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--lime is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--lime is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--lime is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--lime is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Pink
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--pink"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--pink is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--pink is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--pink is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--pink is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Yellow
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--yellow"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--yellow is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--yellow is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--yellow is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--yellow is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Teal
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xl fn-card--teal"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--l fn-card--teal is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--m fn-card--teal is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--s fn-card--teal is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--circle fn-card--xs fn-card--teal is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


</section>
`;

exports[`Storyshots Experimental/card Circle Interactive card with Thumbnail 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        :normal XL
      </b>
    </div>
    
    
    <div>
      <b>
        :hover L
      </b>
    </div>
    
    
    <div>
      <b>
        :active M
      </b>
    </div>
    
    
    <div>
      <b>
        :focus S
      </b>
    </div>
    
    
    <div>
      <b>
        :disabled XS
      </b>
    </div>
       

  </div>
  

  <div
    class="docs-fn-container"
  >
    
    
    <div
      class="fn-card fn-card--circle fn-card--thumbnail fn-card--interactive fn-card--xl"
      tabindex="0"
    >
      
        
      <div
        aria-label="John Doe"
        class="fn-card__thumbnail"
        role="img"
        style="background-image: url('/assets/images/backgrounds/city.jpg')"
      />
      
    
    </div>
    
   
    
    <div
      "=""
      class="fn-card fn-card--circle fn-card--thumbnail fn-card--interactive fn-card--l is-hover"
      tabindex="0"
    >
      
        
      <div
        aria-label="John Doe"
        class=" fn-card__thumbnail"
        role="img"
        style="background-image: url('/assets/images/backgrounds/city.jpg')"
      />
      
    
    </div>
    
    
    
    <div
      class="fn-card fn-card--circle fn-card--thumbnail fn-card--interactive fn-card--m is-active"
      tabindex="0"
    >
      
        
      <div
        aria-label="John Doe"
        class="fn-card__thumbnail"
        role="img"
        style="background-image: url('/assets/images/backgrounds/city.jpg')"
      />
      
    
    </div>
    
    
    
    <div
      class="fn-card fn-card--circle fn-card--thumbnail fn-card--interactive fn-card--s is-focus"
      tabindex="0"
    >
      
        
      <div
        aria-label="John Doe"
        class=" fn-card__thumbnail"
        role="img"
        style="background-image: url('/assets/images/backgrounds/city.jpg')"
      />
      
    
    </div>
    
    
    
    <div
      class="fn-card fn-card--circle fn-card--thumbnail fn-card--interactive fn-card--xs is-disabled"
      tabindex="-1"
    >
      
        
      <div
        aria-label="John Doe"
        class=" fn-card__thumbnail"
        role="img"
        style="background-image: url('/assets/images/backgrounds/city.jpg')"
      />
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/card Rounded Decorative card with Icon 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b />
    </div>
    
    
    <div>
      <b>
        XL
      </b>
    </div>
    
    
    <div>
      <b>
        L
      </b>
    </div>
    
    
    <div>
      <b>
        M
      </b>
    </div>
    
    
    <div>
      <b>
        S
      </b>
    </div>
    
    
    <div>
      <b>
        XS
      </b>
    </div>
       

  </div>
  

  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Indigo
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--indigo"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--indigo"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--indigo"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--indigo"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--indigo"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Crimson
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--crimson"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--crimson"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--crimson"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--crimson"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--crimson"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Cyan
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--cyan"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--cyan"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--cyan"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--cyan"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--cyan"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Lime
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--lime"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--lime"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--lime"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--lime"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--lime"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Pink
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--pink"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--pink"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--pink"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--pink"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--pink"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Yellow
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--yellow"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--yellow"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--yellow"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--yellow"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--yellow"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Teal
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--teal"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--teal"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--teal"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--teal"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--teal"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


</section>
`;

exports[`Storyshots Experimental/card Rounded Decorative card with Initials 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Indigo
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--indigo"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--indigo"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--indigo"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--indigo"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--indigo"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Crimson
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--crimson"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--crimson"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--crimson"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--crimson"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--crimson"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Cyan
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--cyan"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--cyan"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--cyan"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--cyan"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--cyan"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Lime
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--lime"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--lime"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--lime"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--lime"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--lime"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Pink
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--pink"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--pink"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--pink"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--pink"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--pink"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Yellow
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--yellow"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--yellow"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--yellow"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--yellow"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--yellow"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Teal
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--xl fn-card--teal"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--l fn-card--teal"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--m fn-card--teal"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--s fn-card--teal"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--xs fn-card--teal"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


</section>
`;

exports[`Storyshots Experimental/card Rounded Interactive card with Icon 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b />
    </div>
    
    
    <div>
      <b>
        XL
      </b>
    </div>
    
    
    <div>
      <b>
        L
      </b>
    </div>
    
    
    <div>
      <b>
        M
      </b>
    </div>
    
    
    <div>
      <b>
        S
      </b>
    </div>
    
    
    <div>
      <b>
        XS
      </b>
    </div>
       

  </div>
  

  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Indigo
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--indigo"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--indigo"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--indigo"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--indigo"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--indigo"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Crimson
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--crimson"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--crimson"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--crimson"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--crimson"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--crimson"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Cyan
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--cyan"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--cyan"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--cyan"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--cyan"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--cyan"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Lime
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--lime"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--lime"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--lime"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--lime"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--lime"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Pink
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--pink"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--pink"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--pink"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--pink"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--pink"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Yellow
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--yellow"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--yellow"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--yellow"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--yellow"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--yellow"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Teal
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--teal"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--teal"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--teal"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--teal"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--teal"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__icon"
        role="presentation"
      >
        
            
        <span
          class="sap-icon sap-icon--person-placeholder"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  


</section>
`;

exports[`Storyshots Experimental/card Rounded Interactive card with Initials 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
        column-gap: 0.1rem;
        row-gap: 0.1rem;
        background: white;
        padding: 1rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        :normal
      </b>
    </div>
    
    
    <div>
      <b>
        :hover
      </b>
    </div>
    
    
    <div>
      <b>
        :active
      </b>
    </div>
    
    
    <div>
      <b>
        :focus
      </b>
    </div>
    
    
    <div>
      <b>
        :disabled
      </b>
    </div>
       

  </div>
  

  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Indigo
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--indigo"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--indigo is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--indigo is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--indigo is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--indigo is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Crimson
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--crimson"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--crimson is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--crimson is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--crimson is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--crimson is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Cyan
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--cyan"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--cyan is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--cyan is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--cyan is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--cyan is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Lime
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--lime"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--lime is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--lime is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--lime is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--lime is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Pink
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--pink"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--pink is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--pink is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--pink is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--pink is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Yellow
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--yellow"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--yellow is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--yellow is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--yellow is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--yellow is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Teal
      </b>
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xl fn-card--teal"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XL
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--l fn-card--teal is-hover"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        L
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--m fn-card--teal is-active"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        M
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--s fn-card--teal is-focus"
      tabindex="0"
    >
      
        
      <div
        class="fn-card__initials"
      >
        S
      </div>
      
    
    </div>
    
    
    <div
      class="fn-card fn-card--interactive fn-card--xs fn-card--teal is-disabled"
      tabindex="-1"
    >
      
        
      <div
        class="fn-card__initials"
      >
        XS
      </div>
      
    
    </div>
    

  </div>
  


</section>
`;
